# PROVA_CNN-for-Image-Analysis-

./: FINAL_CODE.ipynb  README.md  REEADME  dummy_image.py  generator_image.py  image_generator  pyproject.toml  requirements.txt
function/: __init__.py  custom_model_Resnet.py  grad.py  segmentation.py
