[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function"            # uguale alla cartella del pacchetto
version = "0.1.2"
description = "Funzioni e modelli (demo)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # "torch>=2.1",            # scommenta se ti serve
  "numpy>=1.22"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["function*"]
exclude = ["tests*", "docs*"]
