[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function"
version = "0.1.8"  # bump
description = "Funzioni e modelli (demo)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "torch",
  "torchvision",
  "grad-cam>=1.4.8",   # <-- QUI il cambio
  "matplotlib>=3.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["function*"]
exclude = ["tests*", "docs*"]
